UI: Scrollbar fix

--- a/seascape/public/stylesheets/style.less
+++ b/seascape/public/stylesheets/style.less
@@ -55,15 +55,15 @@ ul > li.active, ul > li:active {
 
 /** -- Scrollbar -- **/
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
 }
  
 ::-webkit-scrollbar-track {
-    background: @secondary;
+    background: @base;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: @base;
+    background: @primary;
 }
 /** -- --------- -- **/
 
